--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -5,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #fffae9;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,13 +14,241 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+header{
+  width: auto;
+}
+
+.app-header{
+  color: white;
+  font-family:'Times New Roman', Times, serif;
+  font-weight: 100;
+  background-color:#FEE38AA8;
+  justify-content: center;
+}
+.Logo{
+  background: linear-gradient(
+    to right,
+    #E65100,
+    #C24500,
+    #9F3901
+  );
+  height: 100px;
+  border-end-end-radius: 50px;
+  border-end-start-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 20px;
+}
+.header-icons{
+  column-count: 4;
+  column-gap: 30px;
+}
+#logo-img{
+  height: auto;
+  width: auto;
+  max-width: 50px;
+}
+#logo-info{
+  font-family: 'League Spartan';
+  font-weight: 100;
+  font-size: 50px;
+  color: white;
+}
+.main-nav{
+  justify-self: center;
+  width: fit-content;
+  margin: auto;
+  column-gap: 20px;
+}
+.icon-header{
+  height: 30px;
+  width: 30px;
+  padding: auto;
+  margin: auto;
+}
+.header-icons li{
+  list-style-type: none;
+}
+.search-container{
+  background-color: #FEE38AA8;
+  display: flex;
+  margin: auto;
+  width: auto;
+  height: 44px;
+  max-width: calc(100% - 20px);
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 22px;
+}
+#search{
+  margin: calc(200px - 100%);
+  width: calc(100% - 100px);
+  color: #000;
+  background-color:transparent;
+  height: inherit;
+  margin: auto;
+  border-radius: 15vh;
+  border: 0px solid #EF762F;
+  box-sizing: border-box;
+  padding-left: 10px;
+  font-size: 18px;
+}
+.search-icon{
+  box-sizing: border-box;
+  height: 30px;
+  width: auto;
+  padding: 5px;
+  color: #ef752f84;
+  margin-left: 5px;
+}
+.filter-button{
+  height: inherit;
+  aspect-ratio: 1/1;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+
+  padding: 5px;
+  border: 5px solid #EF762F;
+  border-radius: inherit;
+  background-color: transparent;
+  color: #EF762F;
+}
+.filter-button:hover{
+  color: #2260FF;
+  border-color: #2260FF;
+}
+.filter-icon{
+  color: inherit;
+  padding: inherit;
+}
+.full-card-profile{
+  width: auto;
+  min-width: auto;
+  max-height: min-content;
+  min-height: max-content;
+  height: max-content;
+  background-color: #FEE38A;
+  align-items: center;
+  justify-content: start;
+  display: flex;
+  margin: 20px;
+  border-radius: 16px;
+}
+.full-card-profile:hover{
+  box-shadow: 0 0 20px 5px #FEE38A,
+              0 0 40px 5px #C24500;
+  cursor: pointer;
+}
+.card-profile{
+  display: flex;
+  margin: 10px;
+  row-gap: 10px;
+}
+.profile-picture{
+  height: 120px;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 80px;
+  aspect-ratio: 1/1;
+  border: 2px solid #9F3901;
+}
+.info{
+  width: 270px;
+  row-gap: 5px;
+  justify-content: start;
+  align-items: start;
+  line-height: 10px;
+  text-align: start;
+  margin: auto;
+  padding-left: 10px;
+}
+.profile-name{
+  font-weight: 600;
+  color: #2260FF;
+}
+.profile-service{
+  font-weight: 300;
+  color: black;
+  font-size: 16px;
+}
+.card-actions{
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+}
+.info-button{
+  box-sizing: border-box;
+  height: inherit;
+  background-color: #2260FF;
+  border-radius: 20px;
+  display: flex;
+  height: 44px;
+  width: 80px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 600;
+}
+.info-button:hover{
+  border-width: 3px;
+  color: #2260FF;
+  background-color: white;
+}
+.icon-button{
+  box-sizing: border-box;
+  background-color: #fff;
+  color: #2260ff;
+  display: flex;
+  border-radius: 50%;
+  height: 44px;
+  width: 44px;
+  padding: 5px;
+}
+.icon-button:hover{
+  border-width: 3px;
+  color: white;
+  border-color: white;
+  background-color: #2260FF;
+}
+.button-icon{
+  scale: 120%;
+  aspect-ratio: 1/1;
+  margin: auto;
+  color: inherit;
+}
+.focus-description{
+  width: 90%;
+  height: fit-content;
+  max-height: 146px;
+  font-weight: 300;
+  color: #000;
+  text-align: left;
+  padding-bottom: 25px;
+}
+.servicos{
+  color: #EF762F;
+  font-family: 'League Spartan';
+  font-weight: 600;
+  font-size: 30px;
+}
+.service-list{
+  width: fit-content;
+  margin: 0 auto;
+  align-content: center;
+}
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #2260FF;
   text-decoration: inherit;
+
 }
+
 a:hover {
-  color: #535bf2;
+  color: #00044e;
+  box-shadow: #1a1a1a;
 }
 
 body {
@@ -36,7 +265,6 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -48,6 +276,7 @@ button {
 }
 button:hover {
   border-color: #646cff;
+  color: #646cff;
 }
 button:focus,
 button:focus-visible {
@@ -57,7 +286,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #FEE38A;
   }
   a:hover {
     color: #747bff;
